扫描需要更新的mod